--- a/pomodoro/css/base.css
+++ b/pomodoro/css/base.css
@@ -6,7 +6,7 @@
   font-family: "Poppins", sans-serif;
   overflow-x: hidden;
   background:
-    url("./assets/coolbackgrounds-fractalize-cool_backgrounds.png"),
+    url("../assets/coolbackgrounds-fractalize-cool_backgrounds.png"),
     linear-gradient(
       135deg,
       #667eea 0%,
